Fixes the z-index of the reader menu relative to pt-dialog

--- a/app/assets/stylesheets/structure.sass
+++ b/app/assets/stylesheets/structure.sass
@@ -51,17 +51,17 @@ header
     cursor: pointer
 
     .dismiss
-      z-index: 40
+      z-index: 12
 
     #reader-icon
       position: absolute
-      z-index: 50
+      z-index: 10
       right: 3em
 
   ul#reader-menu-dropdown
     background-color: $purple
     position: absolute
-    z-index: 50
+    z-index: 10
     min-width: 10em
     top: -1em
     right: -1em
@@ -93,7 +93,7 @@ header
     position: absolute
     top: 2.1em
     right: 1.4em
-    z-index: 100
+    z-index: 15
 
 #reader-icon
   font-size: 90%
